fix: remove text-align for book description

--- a/src/pages/Book/Book.module.scss
+++ b/src/pages/Book/Book.module.scss
@@ -92,10 +92,9 @@
 
   &__description {
     margin: 0;
-    text-align: justify;
     grid-column: 1/3;
-    letter-spacing: 0.03em;
-    line-height: 1.21;
+    letter-spacing: 0.04em;
+    line-height: 1.3;
     @media (max-width: 768px) {
       grid-template-columns: 1fr;
       grid-column: 1/2;
